--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
         <a href="#ubicaciones-container"  onclick="closeNav()">Ubicaciones</a>
         <a href="#contacto-container"  onclick="closeNav()">Contacto</a>
         <hr>
-        <div>
+        <div id="social">
           <a href="#">
             <i class="fi-social-facebook"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="#"  target="_blank">
             <i class="fi-social-instagram"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="#"  target="_blank">
             <i class="fi-social-twitter"></i>
           </a>
+          <p id="copy">Copyright 2017 Citybox, Todos los Derechos Reservados.</p>
         </div>
       </div>
 
