--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  
   </head>
   <body>
     <div class="off-canvas-wrapper">
@@ -23,7 +23,8 @@
       <!-- /Logo -->
 
       <!-- Mobile Nav -->
-      <div id="mySidenav" class="sidenav" data-magellan>
+      <section>
+      <div id="mySidenav" class="sidenav" data-sticky-container data-magellan>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">Quienes somos</a>
         <a href="#servicios-container" onclick="closeNav()">Servicios</a>
@@ -47,6 +48,7 @@
       <div id="mobileNavBar" class="show-for-small-only">
         <a id="buguerMenu" href="javascript:void(0);" class="icon" onclick="openNav()">&#9776;</a>
       </div>
+      </section>
       <!-- /Mobile Nav -->
 
       <!-- Nav -->
@@ -156,15 +158,14 @@
             </div>
             
             <div class="product-container small-6 medium-4 columns">
-              <img class="product-image" src="assets/panaderia.jpg">
+              <img class="product-image" src="assets/pan.jpg">
               <p class="product">Alimentos saludables</p>
             </div>
             
             <div class="product-container small-6 medium-4 columns">
-              <img class="product-image" src="assets/sano.jpg">
+              <img class="product-image" src="assets/saludable.jpg">
               <p class="product">Panaderia</p>
             </div>
-
           </div>
         </div>
       </section>
@@ -252,7 +253,7 @@
         </div>
         <div class="row footer">
           <div class="column">
-            <p id="">Copyright 2017 Revsys, S.A. de C.V. Todos los Derechos Reservados.</p>
+            <p id="">Copyright 2017 Citybox Todos los Derechos Reservados.</p>
           </div>
           <div class="column">
             <p id="aviso-privacidad"><a href="#">Aviso de privacidad</a></p>
