--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section id="hero">
           <div class="hero">
             <div class="hero-text">
-              <h1 id="hero-text">Vive la experiencia de compra 3</h1>
+              <h1 id="hero-text">Vive la experiencia de compra</h1>
             </div>
           </div>
         </section>
