--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7KZP6iyS0aSz96aIaVi87msMr1ZNfkYM&callback=myMap"
     async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script src="js/vendor/foundation.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/what-input.min.js"></script>
+    <script src="js/vendor/foundation.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
