--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CITY BOX</title>
-    <link rel="stylesheet" href="icons/foundation-icons.css">
-    <link rel="stylesheet" href="css/foundation.min.css">
-    <link rel="stylesheet" href="css/app.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="icons/foundation-icons.css">
+    <link rel="stylesheet" href="css/foundation.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/app.min.css"> -->
+    <style>
+      #machine,.logo,.sidenav{height:100%}#locaciones,.hero-text,.product{text-align:center}*{border:0}.footer,.footer-contact{border-top:1px solid #ccc}.sidenav{width:0;position:fixed;z-index:6;top:0;left:0;background-color:red;opacity:.9;overflow-x:hidden;padding-top:60px;transition:.5s}.sidenav a{padding:8px 8px 8px 32px;text-decoration:none;font-size:20px;font-weight:700;color:#fff;display:block;transition:.3s}#copy{padding-top:120px;padding-left:32px;font-size:12px;color:#fff}#social a{display:inline;font-size:32px}.offcanvas a:focus,.sidenav a:hover{color:#FFF}.sidenav .closebtn{position:absolute;top:0;right:25px;font-size:36px;margin-left:50px}#main{transition:margin-left .3s;padding:20px}.logo{width:128px;padding:16px 0}#menu-container{background-color:#272822;opacity:.9}#menu-container li a{font-weight:700;color:#fff;opacity:.8}#menu-container li a:hover{opacity:1}#buguerMenu{color:#fff;font-size:32px;padding:16px}#hero{background:url(../assets/hero-image.jpg) center no-repeat fixed;height:60vh;background-size:cover}.hero-text{position:absolute;top:60%;left:50%;transform:translate(-50%,-50%);color:#fff}#hero-text{font-weight:700;font-size:4rem}#servicios-container{padding-bottom:16px}.section-title{font-size:3.8em;font-weight:700;padding:16px 15px 8px}.section-subtitle{font-size:1.4em;font-weight:600;color:#111;padding-bottom:8px}#servicios-lista{list-style:none!important}#servicios-container li{font-size:1.2em;font-weight:300;color:#333;padding:16px 8px}#ser-icon{display:inline-block;float:left;padding:8px 16px 16px 0;margin:0 16px 0 0}.servicio{display:block}#machine{width:260px}.product-container{margin-bottom:16px}.product{font-size:1.2em;font-weight:500;color:#333;padding:8px 0}#contact-button,#footer-container h4{font-weight:700}.product-image{max-width:100%}#ubicaciones-container{background-color:#f3f3f3}#locaciones{margin-bottom:8px}.location{color:#333;padding:16px}.location:hover{color:#007DF7}#footer-container{background-color:#272822;margin-bottom:0;color:#fff}.social-f{padding:0 16px;font-size:32px}#footer-container a{color:#fff}.footer-contact{font-size:14px;padding-top:16px}.footer{padding:8px 0 0}.footer .column{padding:0;font-size:12px}#aviso-privacidad a{float:right;color:#fff;text-decoration:none}#social-container{padding-right:26px}#perfil-container p,ul{font-size:1.3em;font-weight:300;color:#333;padding:0 15px}@media screen and (max-width:450px){#hero-text{font-size:3rem}#menu-container{background-color:#272822;opacity:.9}#footer-container h4,.footer{padding:8px 15px}.sidenav a{font-size:18px}.section-title{font-size:2.7em}.section-subtitle{padding:15px;font-size:1.2em}.product-image{max-width:100%}}@media screen and (min-width:450px){#footer-container h4,.footer{padding:8px 15px}}@media (-webkit-min-device-pixel-ratio:2){#hero{background-image:url(../assets/hero-image2x.jpg)}}@media only screen and (max-device-width:1024px){#hero{background-attachment:scroll}}
+    </style>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   </head>
   <body>
           
@@ -306,6 +309,11 @@
 
       </div>
       <!-- /Container -->
+    <link rel="stylesheet" href="css/app.min.css">
+    <link rel="stylesheet" href="icons/foundation-icons.css">
+    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.5.4/blazy.min.js"></script>
     <script type="text/javascript">
       // Lazy loading
