--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#contacto-container"  onclick="closeNav()">Contacto</a>
         <hr>
         <div id="social">
-          <a href="#">
+          <a href="https://www.facebook.com/CityBox1">
             <i class="fi-social-facebook"></i>
           </a>
           <p id="copy">Copyright 2017 Citybox, Todos los Derechos Reservados.</p>
@@ -253,7 +253,7 @@
         <section id="footer-container">
           <div id="social-container" class="row align-right text-center">
             <div>
-              <a href="#">
+              <a href="https://www.facebook.com/CityBox1">
                 <i class="fi-social-facebook social-f"></i>
               </a>
             </div>
